(lang dune 3.11)

(name swisstable)

(generate_opam_files true)

(source
 (github syedtaz/swisstable))

(authors "Tazmilur Saad")

(maintainers "Tazmilur Saad")

(license MIT)

(package
 (name swisstable)
 (synopsis "Experimental implementation of swiss tables.")
 (description "Experimental implementation of swiss tables.")
 (depends ocaml dune)
 (tags
  ("hashtable" "swisstable")))
